--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "express-context-store": "^0.3.2",
     "morgan": "^1.10.0",
     "redis": "^4.5.1",
+    "sequelize": "^6.29.1",
+    "sequelize-auto": "^0.8.8",
+    "sequelize-cli": "^6.6.0",
     "uuid": "^9.0.1",
     "winston": "^3.8.2"
   },
@@ -13,7 +16,9 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "db:migrate": "npx sequelize-cli db:migrate",
+    "db:migrate:undo": "npx sequelize-cli db:migrate:undo:all"
   },
   "repository": {
     "type": "git",
