--- a/compose.yml
+++ b/compose.yml
@@ -7,7 +7,7 @@ services:
       - '6389:6379'
   db-lh:
     container_name: mysql-lh
-    image: mysql:5.7
+    image: mysql:8.0.35
     restart: always
     environment:
       MYSQL_USER: admin
@@ -17,9 +17,9 @@ services:
     ports:
       - '127.0.0.1:7306:3306'
     volumes:
-      - local_db_volume_lh:/var/lib/mysql
-    command: mysqld --sql_mode="STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION"
+      - mysql_8:/var/lib/mysql
+    command: mysqld
 
 
 volumes:
-  local_db_volume_lh:
+  mysql_8:
