--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "express": "^4.18.2",
     "express-context-store": "^0.3.2",
     "morgan": "^1.10.0",
+    "mysql2": "^3.6.5",
     "redis": "^4.5.1",
     "sequelize": "^6.29.1",
     "sequelize-auto": "^0.8.8",
@@ -18,7 +19,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "db:migrate": "npx sequelize-cli db:migrate",
-    "db:migrate:undo": "npx sequelize-cli db:migrate:undo:all"
+    "db:migrate:undo": "npx sequelize-cli db:migrate:undo:all",
+    "gen-models": "node src/util/model_generation"
   },
   "repository": {
     "type": "git",
