--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "express-context-store": "^0.3.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.5",
+    "nodemon": "^3.0.2",
     "redis": "^4.5.1",
     "sequelize": "^6.29.1",
     "sequelize-auto": "^0.8.8",
@@ -17,6 +18,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "db:migrate": "npx sequelize-cli db:migrate",
     "db:migrate:undo": "npx sequelize-cli db:migrate:undo:all",
