--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-context-store": "^0.3.2",
+    "mocha": "^10.2.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.5",
     "nodemon": "^3.0.2",
@@ -23,7 +24,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "db:migrate": "npx sequelize-cli db:migrate",
     "db:migrate:undo": "npx sequelize-cli db:migrate:undo:all",
-    "gen-models": "node src/util/model_generation"
+    "gen-models": "node src/util/model_generation",
+    "test:fast": "NODE_ENV=test mocha test --async-only --recursive --timeout 5000"
   },
   "repository": {
     "type": "git",
