--- a/package.json
+++ b/package.json
@@ -21,11 +21,10 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "db:migrate": "npx sequelize-cli db:migrate",
     "db:migrate:undo": "npx sequelize-cli db:migrate:undo:all",
     "gen-models": "node src/util/model_generation",
-    "test:fast": "NODE_ENV=test mocha test --async-only --recursive --timeout 5000"
+    "test": "NODE_ENV=test mocha test --async-only --recursive --timeout 5000"
   },
   "repository": {
     "type": "git",
