--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "db:migrate:undo": "npx sequelize-cli db:migrate:undo:all",
     "gen-models": "node src/util/model_generation",
     "pretest": "if [ $NODE_ENV = \"test\" ]; then echo \"Environment validated :)\"; else exit ; fi",
+    "pretest:setup": "if [ $NODE_ENV = \"test\" ]; then echo \"Environment validated :)\"; else exit ; fi",
     "test": "mocha test --async-only --recursive --timeout 5000",
     "test:setup": " npm run db:migrate:undo && npm run db:migrate && npm run db:seed"
   },
