--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
+    "bad-words": "^3.0.4",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "email-validator": "^2.0.4",
     "express": "^4.18.2",
     "express-context-store": "^0.3.2",
     "mocha": "^10.2.0",
