--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "jsonwebtoken": "^9.0.2",
     "mocha": "^10.2.0",
     "morgan": "^1.10.0",
-    "mysql2": "^3.6.5",
+    "mysql2": "^3.9.4",
     "nodemon": "^3.0.2",
     "redis": "^4.5.1",
     "sequelize": "^6.29.1",
     "sequelize-auto": "^0.8.8",
     "sequelize-cli": "^6.6.0",
+    "umzug": "^3.8.0",
     "uuid": "^9.0.1",
     "winston": "^3.8.2"
   },
