--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "morgan": "^1.10.0",
     "mysql2": "^3.9.4",
     "nodemon": "^3.0.2",
+    "pug": "^3.0.2",
     "redis": "^4.5.1",
     "sequelize": "^6.29.1",
     "sequelize-auto": "^0.8.8",
