--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
     "express-context-store": "^0.3.2",
+    "jsdom": "^24.0.0",
     "jsonwebtoken": "^9.0.2",
     "mocha": "^10.2.0",
     "morgan": "^1.10.0",
