--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
     "dev:web": "nodemon web.js",
     "dev:reqUtil": "nodemon req_util.js",
     "db:seed": "npx sequelize-cli db:seed:all",
+    "db:seed:undo": "npx sequelize-cli db:seed:undo:all",
     "db:migrate": "npx sequelize-cli db:migrate",
     "db:migrate:undo": "npx sequelize-cli db:migrate:undo:all",
-    "gen-models": "node src/util/model_generation",
+    "gen:models": "node src/util/model_generation",
     "pretest": "if [ $NODE_ENV = \"test\" ]; then echo \"Environment validated :)\"; else exit ; fi",
     "pretest:setup": "if [ $NODE_ENV = \"test\" ]; then echo \"Environment validated :)\"; else exit ; fi",
     "test": "mocha test --async-only --recursive --timeout 5000",
