--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sequelize": "^6.29.1",
     "sequelize-auto": "^0.8.8",
     "sequelize-cli": "^6.6.0",
+    "serve-favicon": "^2.5.0",
     "umzug": "^3.8.0",
     "uuid": "^9.0.1",
     "winston": "^3.8.2"
