--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "aws-sdk": "^2.1631.0",
     "bad-words": "^3.0.4",
     "bcrypt": "^5.1.1",
     "cookie-session": "^2.1.0",
